SG-2004-07-12-0: Bugfix:    - qstat -j -xml printed unparsable xml-output
                            - the qstat xml schema missed the hard request
                              queue field.
                 Changed:   qstat, detailed_job_info.xsd
                 Issue:     1144
                 Bugtraq:   -NA-
                 Review:    AA

AH-2004-07-09-0: Bugfix:    Deleted pending job appears in qstat
                 Changed:   qstat, qhost
                 Issue:     1113
                 Bugtraq:   5072481
                 Review:    CR

SG-2004-07-09-0: Bugfix:    scheduler ignores queue seqno for queue sorting
                 Changed:   scheduler  
                 Issue:     1133
                 Bugtraq:   5071914
                 Review:    RH

CR-2004-07-07-0: Bugfix:    qping doesn't support host_aliases file
                 Changed:   qping binary
                 Issue:     1124
                 Bugtraq:   5071539
                 Review:    AA

MD-2004-07-08-0: Bugfix:    Qmaster requires a local conf in order to start
                 Issue:     1104 
                 Bugtraq:   5071987
                 Review:    CR
                 Changed:   qmaster_configuration

JG-2004-07-07-0: Bugfix:    Fixed the build for AIX.

CR-2004-07-06-0: Bugfix:    qmaster clients may not reconnect after qmaster 
                            outage
                 Changed:   communication library (commlib)
                 Issue:     1126
                 Review:    JG

JG-2004-07-06-2: Bugfix:    Fixed the build for HPUX.

JG-2004-07-06-1: Bugfix:    projects not available after sge_qmaster restart
                 Changed:   sge_qmaster
                 Issue:     1122
                 Bugtraq:   5071498
                 Review:    CR 

JG-2004-07-06-0: QA:        Update of review form and help text.
                 Review:    CR
                 
CR-2004-06-18-0: Bugfix:    o sge_qmaster will not start unless run only as 