@@ -1,3 +1,11 @@
+JG-2004-07-12-0: Bugfix:    qmaster spooled tightly integrated parallel tasks
+                            whenever online usage was reported by an execd.
+                            Added ADOC header for job/ja_task/pe_task spooling.
+                 Changed:   sge_qmaster
+                 Issue:     1129
+                 Bugtraq:   5072772
+                 Review:    AH
+
 SG-2004-07-12-0: Bugfix:    - qstat -j -xml printed unparsable xml-output
                             - the qstat xml schema missed the hard request
                               queue field.
